--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.2",
+    "@angular/animations": "^9.1.3",
+    "@angular/cdk": "^9.2.1",
     "@angular/common": "~9.1.2",
     "@angular/compiler": "~9.1.2",
     "@angular/core": "~9.1.2",
     "@angular/forms": "~9.1.2",
+    "@angular/material": "^9.2.1",
+    "@angular/material-moment-adapter": "^9.2.1",
     "@angular/platform-browser": "~9.1.2",
     "@angular/platform-browser-dynamic": "~9.1.2",
     "@angular/router": "~9.1.2",
     "@fortawesome/fontawesome": "^1.1.8",
+    "hammerjs": "^2.0.8",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
